# StockTradebyZ

./: .gitignore  fetch_kline.py  main.py  project_config.json  pyproject.toml  select_stock.py
.github/workflows/: daily.yml
